part1/1.9/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
  labels:
    app: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
